<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.week3aditionallab.MainActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_header_description"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/txt_header"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/txt_steak"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_crab"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_water"
            android:textSize="24sp" />

    </RadioGroup>

    <Spinner
        android:id="@+id/mealSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.09"
        android:entries="@array/mealSize"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" />

    <CheckBox
        android:id="@+id/cashCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/txt_pay_by_cash"
        android:textSize="24sp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_weight="0.06"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTotalHeader"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingBottom="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:text="@string/txt_total"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            tools:ignore="NestedWeights,RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/txt_total_cost"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCompute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/txt_calculate"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/txt_textview"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36sp" />

</LinearLayout>